Regression: Data-block default socket value aren't used for created node group #106208

Closed
opened 2023-03-28 08:41:37 +02:00 by Andi Boesch · 3 comments

System Information
Operating system: Windows
Graphics card: RTX 3090

Blender Version
Broken: 3.5
Worked: 3.4

Caused by: Dynamic socket declarations

Short description of error
Data-block default socket value aren't used for created node group.

Exact steps for others to reproduce the error

  1. Create a material setup node.
  2. Select some material in the input socket.
  3. Create a group from the node.
  4. The material is selected as the default value for the group socket.
    5 Create an instance of this group. Material is not used.
**System Information** Operating system: Windows Graphics card: RTX 3090 **Blender Version** Broken: 3.5 Worked: 3.4 Caused by: Dynamic socket declarations **Short description of error** Data-block default socket value aren't used for created node group. **Exact steps for others to reproduce the error** 1. Create a material setup node. 2. Select some material in the input socket. 3. Create a group from the node. 4. The material is selected as the default value for the group socket. 5 Create an instance of this group. Material is not used.
Andi Boesch added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-28 08:41:38 +02:00
Iliya Katushenock changed title from Asset Manager, Materials not linked in Geometry Node Tree in blender 3.5 to Regression: Data-block default socket value aren't used for created node group 2023-03-29 03:55:16 +02:00

Hello, I checked. The linking is still happening, your material gets into the project and it's there as the default value of the socket. It's just that the new way of working with sockets does not involve processing data blocks.

Hello, I checked. The linking is still happening, your material gets into the project and it's there as the default value of the socket. It's just that the new way of working with sockets does not involve processing data blocks.
Author

So it's a bug and will be fixed? That would make me very happy :)

It really poses a big problem for me unfortunately, so I (like many other people) want to sell assets. It doesn't work well when the end user still has to insert the materials himself.

So it's a bug and will be fixed? That would make me very happy :) It really poses a big problem for me unfortunately, so I (like many other people) want to sell assets. It doesn't work well when the end user still has to insert the materials himself.

So far, I myself only see workarounds to solve this.
The most common would be to write the default value as part of the creation function, since these values (in theory) should never be used again. You wouldn't want just changing the node group to overwrite an intentionally empty socket field with a default one, just because of its presence...
So if there is a decision, it will still need to be agreed upon.

And yes, this is a functional regression, although I don't see it as a high priority (because I don't use standard values for data blocks that often myself).

So far, I myself only see workarounds to solve this. The most common would be to write the default value as part of the creation function, since these values (in theory) should never be used again. You wouldn't want just changing the node group to overwrite an intentionally empty socket field with a default one, just because of its presence... So if there is a decision, it will still need to be agreed upon. And yes, this is a functional regression, although I don't see it as a high priority (because I don't use standard values for data blocks that often myself).
Iliya Katushenock added
Priority
High
and removed
Priority
Normal
labels 2023-03-29 11:18:56 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-20 22:28:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106208
No description provided.